tests/org.eclipse.php.core.tests/workspace/errors/php5/unfinishedMethodDecl4.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
function foo($a,) {}
?>
--EXPECT--
[line=2, start=21, end=22] syntax error, unexpected ','